# ShanksPrimeReciprocalsPy

./: 002.bat  prime_reciprocals.csv  pyproject.toml  shankprime.py
